Add Spotify playlist playback

--- a/config/goon.env
+++ b/config/goon.env
@@ -1,2 +1,5 @@
 # Environment variables for the unified Goon Bot
 DISCORD_TOKEN=REPLACE_WITH_DISCORD_TOKEN
+SPOTIFY_CLIENT_ID=REPLACE_WITH_SPOTIFY_CLIENT_ID
+SPOTIFY_CLIENT_SECRET=REPLACE_WITH_SPOTIFY_CLIENT_SECRET
+SPOTIFY_PLAYLIST_URL=https://open.spotify.com/playlist/0G8YaEVkh0bjCOVt0SSyoC?si=6c4c747f789c4124
