Generalize server names to remove personal info

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ replay_pid*
 # Python bytecode
 __pycache__/
 *.py[cod]
+
+# Ignore environment files that may store private credentials
+.env
+config/setup.env
