--- a/config/setup.env
+++ b/config/setup.env
@@ -6,7 +6,7 @@ GRIMM_DISCORD_TOKEN=
 GRIMM_API_KEY_1=
 GRIMM_API_KEY_2=
 GRIMM_API_KEY_3=
-SOCKET_SERVER_URL=
+SOCKET_SERVER_URL=  # optional URL for the status dashboard
 
 # BloomBot settings
 BLOOM_DISCORD_TOKEN=
