Add ChatGPT support for bots

--- a/config/env_template.env
+++ b/config/env_template.env
@@ -6,6 +6,8 @@ GRIMM_DISCORD_TOKEN=
 GRIMM_API_KEY_1=
 GRIMM_API_KEY_2=
 GRIMM_API_KEY_3=
+GRIMM_OPENAI_KEY=
+GRIMM_GPT_ENABLED=true
 SOCKET_SERVER_URL=  # optional URL for the status dashboard
 
 # BloomBot settings
@@ -13,12 +15,16 @@ BLOOM_DISCORD_TOKEN=
 BLOOM_API_KEY_1=
 BLOOM_API_KEY_2=
 BLOOM_API_KEY_3=
+BLOOM_OPENAI_KEY=
+BLOOM_GPT_ENABLED=true
 
 # CurseBot settings
 CURSE_DISCORD_TOKEN=
 CURSE_API_KEY_1=
 CURSE_API_KEY_2=
 CURSE_API_KEY_3=
+CURSE_OPENAI_KEY=
+CURSE_GPT_ENABLED=true
 
 # Unified bot settings
 DISCORD_TOKEN=
