Schedule daily curse at noon and add Spotify search

--- a/config/env_template.env
+++ b/config/env_template.env
@@ -29,3 +29,6 @@ CURSE_GPT_ENABLED=true
 # Unified bot settings
 DISCORD_TOKEN=
 OPENAI_API_KEY=
+# Optional Spotify API credentials for music search
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
