Add error handling, permissions, status and logging

--- a/config/env_template.env
+++ b/config/env_template.env
@@ -29,3 +29,6 @@ OPENAI_API_KEY=
 # Optional Spotify API credentials for music search
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+
+# User ID to notify on critical errors (optional)
+ADMIN_USER_ID=
